--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
+    "@vitalets/google-translate-api": "^7.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
     "random-id": "^1.0.4"
